src/objects/Clockify_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Clockify api url and api key.</description>
    <label>Clockify Settings</label>
    <fields>
        <fullName>Error_Email__c</fullName>
        <label>Error Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <label>Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XApikey__c</fullName>
        <label>XApikey</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>